--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -24,3 +24,18 @@ body
 .container
     max-width: 1367px
     margin: 0 auto
+
+.btn
+    height: 84px
+    padding: 1rem 2rem
+
+.btn-primary-outline
+    border: 1px solid var(--primary)
+    background: #e9d7a71a
+    color: white
+    display: flex
+    align-items: center
+    justify-content: center
+    transition: all 0.3s ease-in
+    &:hover
+        background: #e9d7a70a
