--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,20 @@ body {
   padding: 1rem 2rem;
 }
 
+.btn-primary {
+  background: var(--primary);
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease-in;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 600;
+}
+.btn-primary:hover {
+  background: rgba(255, 206, 78, 0.8);
+}
+
 .btn-primary-outline {
   border: 1px solid var(--primary);
   background: rgba(233, 215, 167, 0.1019607843);
@@ -110,4 +124,36 @@ body {
     width: 48px;
     height: 48px;
   }
+}
+.hero {
+  height: 79vh;
+  margin-top: 21vh;
+}
+.hero__top > div:first-child h1 {
+  font-family: Oxanium;
+  font-size: 85px;
+  font-weight: 700;
+  line-height: 130px;
+  letter-spacing: 0em;
+  color: var(--light);
+}
+.hero__top > div:first-child h1 span {
+  color: var(--primary);
+}
+
+.hero-stat-card h2 {
+  font-family: Oxanium;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 78px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--light);
+}
+.hero-stat-card p {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 35px;
+  letter-spacing: 0em;
+  color: #9b9e9a;
 }/*# sourceMappingURL=main.css.map */
